changes made to h1

--- a/sample.html
+++ b/sample.html
@@ -2,9 +2,11 @@
 <head>
 <title>SAMPLE HTML</title>
 </head>
+</h1>There has been changes to this file </h1>
 
 <body>
 This is a Sample HTML document format
+
 </body>
 
 </html>
