h2 changes were added

--- a/sample.html
+++ b/sample.html
@@ -3,6 +3,7 @@
 <title>SAMPLE HTML</title>
 </head>
 </h1>There has been changes to this file </h1>
+</h2>Lets add in more changes</h2>
 
 <body>
 This is a Sample HTML document format
